--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -4,6 +4,12 @@
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-cron": "^3.0.3",
+    "ws": "^8.17.1"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "mocha": "^10.6.0"
   }
 }
