--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "apollo-server": "^3.13.0",
     "axios": "^1.7.2",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "graphql": "^16.9.0",
     "node-cron": "^3.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ws": "^8.17.1"
   },
   "devDependencies": {
