--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "graphql": "^16.9.0",
     "node-cron": "^3.0.3",
     "swagger-jsdoc": "^6.2.8",
