--- a/NodeJS/GraphQL/package.json
+++ b/NodeJS/GraphQL/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@apollo/client": "^3.11.1",
     "@apollo/server": "^4.10.4",
-    "graphql": "^16.9.0"
+    "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
+    "express": "^4.19.2",
+    "graphql": "^16.9.0",
+    "graphql-playground-middleware-express": "^1.7.23",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
+    "subscriptions-transport-ws": "^0.11.0"
   }
 }
