--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "apollo-server": "^3.13.0",
     "axios": "^1.7.2",
     "basic-auth": "^2.0.1",
