--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "chai": "^5.1.1",
-    "mocha": "^10.6.0"
+    "mocha": "^10.6.0",
+    "nock": "^13.5.4"
   }
 }
