--- a/NodeJS/GraphQL/package.json
+++ b/NodeJS/GraphQL/package.json
@@ -12,11 +12,13 @@
   "type": "module",
   "dependencies": {
     "@apollo/client": "^3.11.1",
-    "@apollo/server": "^4.10.4",
+    "@apollo/server": "^4.11.0",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "graphql": "^16.9.0",
+    "graphql-middleware": "^6.1.35",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
