--- a/NodeJS/GraphQL/package.json
+++ b/NodeJS/GraphQL/package.json
@@ -12,7 +12,9 @@
   "type": "module",
   "dependencies": {
     "@apollo/client": "^3.11.1",
+    "@apollo/federation": "^0.38.1",
     "@apollo/server": "^4.11.0",
+    "@apollo/subgraph": "^2.8.4",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
