--- a/NodeJS/GraphQL/package.json
+++ b/NodeJS/GraphQL/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.9.0",
     "graphql-middleware": "^6.1.35",
     "graphql-playground-middleware-express": "^1.7.23",
+    "graphql-query-complexity": "^1.0.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "subscriptions-transport-ws": "^0.11.0"
