--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -11,6 +11,7 @@
     "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
+    "jose": "^5.8.0",
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
